[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "account-service-decorator"
version = "0.1.0"
description = "Client utilities and decorator for the Account Service"
readme = { text = "Account Service decorator client." }
requires-python = ">=3.10"
authors = [
    { name = "chandu ittamsetty" }
]
dependencies = [
    "httpx>=0.24",
    "respx>=0.21",
]

[tool.setuptools]
packages = ["account_service_client"]

